app/assets/stylesheets/controllers/addresses.css.scss
// Place all the styles related to the addresses controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@import "variables.css.scss";

.container-addresses{
  #map{
//    padding-top: 50px;
//    box-shadow: 0 0 20px #AAAAAA;
    border: 1px solid #ccc;
  }


  .property-page{
    margin-top: 50px;
  }
  #map-search-mode{
    display: none;
  }

  label.btn{
    border-radius: 5px;
    color: white;
    font-size: 12px;
    font-weight: 100;
    &:hover{
      background: none repeat scroll 0 0 #62C1CC !important;
    }
  }
  input:checked + label.btn {
    background-color: #E6E6E6;
    background-image: none;
    box-shadow: 0 2px 4px rgba(0, 0, 0.5, 0.9) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
    color: rgba(255, 255, 255, 0.8);
    outline: 0 none;
    color: black;
  }

	header{
//		height: 40px;
    
		h1 {
  		float: left;
  		font-size: 135%;
  		margin: 0;
  		padding: 0 0 0 15px;
  		text-align: left;
  		width: 290px;
		}
	}


  .no-search-results{
    position: relative;
    min-height: 400px;
    margin-top: 50px;
		
		.suggestions{
			width: 600px;
			margin:0 auto;
		}
  }
  


  .main{
    background-color: white;
    border: 1px solid #efefef;
    border-radius: $borderRadius;
    padding: 20px;
    position: relative;


  }

  .sidebar{

    .map{
      margin-top: 0px;
    }

    .accessor{
      
    }

    .faq{
      margin-top: 50px;
    }

    .subscribe{
      text-align: left;
//      padding: 2px;
//      position: absolute;
//      top: 0;
//      right: 0;
      .subscribe-button{
        &:hover{
          cursor: pointer;
        }
      }
    }

  }

  .toggle {
    padding: 10px 0;
  }


  .status-update{
    display: inline-block;
    padding: 2px;
    margin-top: 10px;
    font-size: 115%;

    .no-record-notice{

      padding: 15px;
      background-color: $lighterTeal;
      border-radius: $borderRadius;
      margin: 15px 0;
      font-family: "Lato";
      font-size: $normalFontSize;
    }
  }

  .property-history{

    .case{

      h2{
        font-family: "Lato";
        font-size: 150%;
        font-weight: 300;
        text-align: left;  
        margin: 0 15px;
        color: inherit;      
      }
    }

  }

  .case-history{

    .arrow{
      background: url("/assets/arrow-right.png") no-repeat scroll 10px 20px transparent;
      padding: 15px;
    }

    .timeline{
      font-size: 120%;
      color: #58595B;
      font-family: "Lato";   
      font-weight: 300;  
      margin-top: 40px;
    }

    .status{
      font-weight: normal;
    }

    .case-number{
      border-bottom: 1px solid $lightGrey;
      padding-bottom: 8px;
    }


    td{
      border-top: none;
    }
  }



  .pager {
    margin-bottom: 15px;
  }



  table {
    tr {
      padding: 15px 0;
    }

    td {
    }

    .status {
      min-width: 120px;
    }

    .date {
      min-width: 80px;
      text-align: center;
    }
  }
}




.assessor{

  p{
    font-weight: 200;
    font-style: italic;
    font-size: 90%;
  }

}

.ui-autocomplete{
  z-index: 100 !important;
}

.leaflet-container .leaflet-control-attribution{
	display: none;
}


.leaflet-popup-content-wrapper{
  border-radius: 10px;
}

.leaflet-popup-content {

  overflow: hidden;
  text-align: center;
  h3 {
    font-size: $largerFontSize;
    line-height: 16px;
    padding-bottom: 10px;
    a{
      text-transform: capitalize;
      color: $orange !important;
    }
  }

  img{
    border: 1px solid $headerLineBreakColor;
    text-align: center;
    width: 200px;
    height: 100px;

  }
  p{
    font-family: "Lato";
    margin: 5px;
    font-size: $largeFontSize;
  }


}

.dotmarker{
  background: url("/assets/dotmarker.png") no-repeat scroll 0px 0px transparent;  
}

#show-history{
  display:none;
  &:hover{
    cursor: pointer;
  }
}

.maps-marker{
    color: white;
    font-weight: bold;
    height: 40px;
//    margin: 0px 13px 2px 0px;
    width: 22px;
    padding: 17px 7px;
    position: relative;
}

.two-digits{

  .maps-marker{
    padding: 20px 3px 18px;
  }
}

.three-digits{
  .maps-marker{
    padding: 3px 2px 25px;
    font-size: 10px;
  }
}


.marker, .address.result .maps-marker{
    text-align: center;
    padding-top: 2px;
    background: url("/assets/marker.png") no-repeat scroll 0px 0px transparent;
}

.marker.marked, .marked.address.result .maps-marker{
   background: url("/assets/marker-selected.png") no-repeat scroll 0px 0px transparent;
}

.leaflet-marker-icon{
    color: white;
    font-weight: bold;
    margin: 2px -9px !important;
//  margin: 0 !important;
}


.leaflet-marker-icon.marked{
  z-index: 1000 !important;
}

.leaflet-marker-pane img.marked {
  border: 1px solid red;
  z-index: 200;
}

.address{
  &:hover{
    cursor: pointer;
  }
}
.address.result.marked {
  background-color: $lighterTeal;
  z-index: 200;
}

.address-title {
  h1 {
    padding: 5px 10px;
    color: $darkGrey;
    font-family: "Lato";
    font-weight: 200;
    font-size: 295%;
  }

  border-bottom: 1px solid $darkGrey;
  clear: both;

}

.case-number {
  h4 {
    color: $darkGrey;
    float: left;
    padding: 3px 8px;
    font-size: 24px;
    font-weight: 300;
  }
}



@include faq-mixin;

.view-all-faq{
  font-size: $largeFontSize;
  text-align: left;
  margin-left: 35px;
}



.container-addresses-show{
  thead{
//    display: none;
  }
}


.progress-bar-wrapper {
  margin-top: 5px;
  min-height: 10px;

  .table{


    width:inherit;
    margin: 0 20px;


    tr{

      &:hover{
        background: transparent !important;
      }

      td{
        padding: 0px 0;
        border: 0;

        &:hover{
          background: transparent !important;
        }
      }

    }


    thead{
      .property-status{
        font-size: 80%;
        padding: 0;
        padding: 10px;
        text-align: center;
      }
    }

    .case-number{
      padding: 5px;
      .table-condensed{
        td{
          padding: 10px;

        }
      }
    }
  }
  .date {
  }

  .progress-arrow{
    height: 25px;
    position: relative;
    width: 130px;
    margin-right: -25px;

    &:hover{
      cursor: pointer;
    }


    &.error {
//      background: url('/assets/progress-arrows.png') no-repeat 0 0;
//      background: url('/assets/progress-arrows.png') no-repeat 0 -25px transparent;
      background: url("/assets/single-progress-arrows-2.png") no-repeat scroll 0 -102px transparent;
    }

    &.inspection {
//      background: url('/assets/progress-arrows.png') no-repeat 0 0;
//      background: url('/assets/progress-arrows.png') no-repeat 0 -25px transparent;
      background: url("/assets/single-progress-arrows-2.png") no-repeat scroll 0 -26px transparent;
    }

    &.notification {
//      background: url('/assets/progress-arrows.png') no-repeat 0 0;
//      background: url('/assets/progress-arrows.png') no-repeat 0 -25px transparent;
      background: url("/assets/single-progress-arrows-2.png") no-repeat scroll 0 -26px transparent;
    }

    &.hearing{
//      background: url('/assets/progress-arrows.png') no-repeat 0 -25px transparent;
//      background: url('/assets/progress-arrows.png') no-repeat -5px -49px transparent;
      background: url("/assets/single-progress-arrows-2.png") no-repeat scroll 0 -26px transparent;
    }

    &.judgement {
//      background: url('/assets/progress-arrows.png') no-repeat 0 -25px transparent;
//      background: url('/assets/progress-arrows.png') no-repeat 0 -73px transparent;
      background: url("/assets/single-progress-arrows-2.png") no-repeat scroll 0 -26px transparent;

    }

    &.resolution {
//      background: url('/assets/progress-arrows.png') no-repeat 0 -25px transparent;
//      background: url('/assets/progress-arrows.png') no-repeat -225px -50px transparent;
      background: url("/assets/single-progress-arrows-2.png") no-repeat scroll 0 -26px transparent;

      &.pending {
        background: url("/assets/single-progress-arrows-2.png") no-repeat scroll -1px -55px transparent;
      }
    }

    &.pending {
      background: url("/assets/single-progress-arrows-2.png") no-repeat -1px -1px transparent;
    }


  }

}



.property-status{
  text-transform: uppercase;
}

.property-status:hover{
  cursor:pointer;
}


.progress-indic-wrapper {
  margin-top: 4px;

  .date {
    &:before {
      width: 8px;
      height: 8px;
      margin: 2px 2px 0 0;
      display: block;
      float: left;
      border-radius: 4px;
      -moz-border-radius: 4px;
      -webkit-border-radius: 4px;
      color: #fff;
      background-color: #16A765;
      content: " ";
    }

    &.empty:before {
      background-color: #fff;
      border: 1px solid #CCCCCC;
      width: 6px;
      height: 6px;
      border-radius: 4px;
      -moz-border-radius: 4px;
      -webkit-border-radius: 4px;
    }

    &.inspection:before {
      background-color: #FA573C;
    }

    &.notification:before {
      background-color: #FFAD46;
    }

    &.hearing:before{
      background-color: #16A765;
    }

    &.judgement:before {
      background-color: #4986E7;
    }

    &.resolution:before {
      background-color: #A47AE2;
    }
  }
}


.cases {
  margin-top: 40px;
}

.case {
  margin-top: 20px;
}

.table-nolines th, .table-nolines td{
  border-top:none !important;
  padding-top: 0px !important;
}

.sidedivide{
  text-align:center;
  margin: 8px 0 8px 0;
}

.centered{
  text-align:center;
}

.assessor{
  font-size: 16px;
  padding: 20px 0;
}




.pager a{
  cursor:pointer
}

